# rate_my_code

./: .flake8  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
examples/: basic_demo.py  fish_demo.py  pi_demo.py
examples/example_code/: bad_pi.py  ok_pi.py  perfect_pi.py
rate_my_code/: __init__.py  _version.py  core.py  fish.py  kot.py  pylint.py  zen.py
tests/: test_core.py  test_fish.py  test_kot.py  test_pylint.py
