[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Verwende die Version aus git tags, fallback auf 0.1.0
version_scheme = "post-release"
local_scheme = "dirty-tag"
fallback_version = "0.1.0"
write_to = "rate_my_code/_version.py"

[project]
name = "rate-my-code"
version = "0.1.0"
description = "A funny toy package to rate your Python code (or Cod fish ðŸŸ, or Kot ðŸ¤¢)."
authors = [
    { name = "Dein Name", email = "dein.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "pylint>=2.20"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.0",
    "flake8>=7.0",
    "mypy>=1.0",
    "build>=1.0"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 89
target-version = ['py39']
